# languagemirror_bot

./: .env.example  .gitignore  .replit  Procfile  README.md  RENDER_DEPLOYMENT.md  add_test_feedback.py  admin_feedback_bot.py  admin_tools.py  app.py  bot.py  bot_manager.py  bot_workflow.py  check_db_connection.py  database_utils.py  db_session_manager.py  debug_admin_feedback.py  deepseek_client.py  deploy_to_render.sh  excel_report.py  fix_bot_conflicts.py  keep_bot_running.py  language_mirror_bot.py  language_mirror_telebot.py  main.py  models.py  openrouter_client.py  pyproject.toml  render.yaml  requirements-deploy.txt  requirements-github.txt  requirements.txt  restart_bot.py  run_bot.py  run_bot_daemon.py  run_bot_in_background.py  run_bot_stable.py  run_clean_bot.py  run_directly.py  run_telegram_bot.py  (+25 more)
.github/workflows/: deploy.yml
attached_assets/: Pasted-System-Prompt-natural-phrasing-AI--1745557433318.txt  Pasted-System-prompt-You-are-a-friendly-thoughtful-AI-language-coach-You-talk-to-the-user-in-short-nat-1745556166702.txt
github_export/: README.md  db_session_manager.py  start_bot_stable.sh
github_ready/: .env.example  .gitignore  README.md  language_mirror_telebot.py  start_bot_stable.sh
github_version/: .env.example  .gitignore  LICENSE  README.md  add_test_feedback.py  db_session_manager.py  excel_report.py  language_mirror_telebot.py  main.py  openrouter_client.py  requirements.txt  run_bot_stable.py  session_manager.py  start_bot_stable.sh
reports/: feedback_report_20250425_064238.xlsx
templates/: admin_feedback.html
(+6 files in other folders)
